# fusion

./: .clangd  .gitignore  .gitmodules  Cargo.toml  MVP  README.md  TODO  index.html
.github/workflows/: ci.yml  rust.yml
.zed/: tasks.json
crates/c_module_example/: build.bat  build.sh  heap.c  module.c  module.wasm  print.c
crates/c_module_example/allocator/: assert.h
crates/c_module_example/module/: manifest.toml  module.wasm
crates/c_module_example/module/config/: definition.nc
crates/cargo-fusion/: Cargo.toml
crates/cargo-fusion/src/: main.rs
crates/compositor/: Cargo.toml  build.rs
crates/compositor/src/: main.rs
crates/compositor/src/capabilities/graphics/: ffi.rs
crates/compositor/src/capabilities/system/: audio.rs
crates/compositor/src/compositor/: backend.rs  cursor.rs  data.rs  input.rs  mod.rs  output.rs  state.rs  udev.rs  window.rs
crates/compositor/src/compositor/api/: general.rs  mod.rs
crates/compositor/src/compositor/grabs/: mod.rs  move_grab.rs  resize_grab.rs
crates/compositor/src/loader/: mod.rs  state.rs  window.rs
crates/compositor/src/module/: context.rs  loader.rs  mod.rs  stdlib.rs  table.rs
crates/compositor/src/module/config/: value.rs
crates/ctl/: Cargo.toml
crates/ctl/src/: main.rs
crates/engine-tool/: Cargo.toml
crates/fusion-socket-protocol/: Cargo.toml
crates/fusion-socket-protocol/src/: lib.rs
crates/fusionctl/: Cargo.toml
crates/fusionctl/src/: main.rs
crates/graphics/: Cargo.toml
crates/graphics-derive/: Cargo.toml
crates/graphics-derive/src/: lib.rs
crates/graphics-widgets/: Cargo.toml
crates/graphics-widgets/src/: button.rs  image.rs  lib.rs  row.rs  slider.rs  text.rs  timer.rs
crates/graphics/assets/: shader.wgsl
crates/graphics/src/: app.rs  error.rs  graphics.rs  lib.rs  widget.rs  window.rs
crates/graphics/src/_content/: font.rs  loader.rs  macros.rs  mod.rs  resource.rs  storage.rs  texture.rs
crates/graphics/src/content/: font.rs  handle.rs  mod.rs  storage.rs  svg.rs
crates/graphics/src/rendering/: bind_group.rs  bind_group_layout.rs  commands.rs  gpu.rs  instance.rs  material.rs  mesh.rs  mod.rs  text.rs  vertex.rs
crates/graphics/src/rendering/commands/: draw_text.rs  draw_texture.rs
crates/graphics/src/types/: border.rs  bounds.rs  color.rs  corners.rs  mod.rs  paint.rs  rect.rs  stroke.rs  texture.rs
crates/graphics/src/types/styling/: background.rs  mod.rs  themes.rs
crates/libnmmodule/: nms_audio.h  nms_defs.h  nms_import.h  nms_module.h  nms_net_socket_tcp.h  nms_net_socket_udp.h
crates/libnthm/: module.h  types.h
crates/libnthm/ui/: commands.h  texture.h
crates/module-engine/: Cargo.toml
crates/module-engine/src/: context.rs  engine.rs  ffi.rs  general.rs  lib.rs  loader.rs  logging.rs  manifest.rs  stdlib.rs  table.rs
crates/module-engine/src/capabilities/: mod.rs  window.rs
crates/module-engine/src/capabilities/general/: log.rs  mod.rs
crates/module-engine/src/capabilities/graphics/: mod.rs
crates/module-engine/src/capabilities/net/socket/: udp.rs
crates/module-engine/src/config/: mod.rs  section.rs  section_option.rs
crates/module-engine/wit/: general.wit  window.wit
crates/plugin-engine/: Cargo.toml
crates/plugin-engine/src/: context.rs  engine.rs  env.rs  general.rs  lib.rs  loader.rs  manifest.rs  table.rs
crates/plugin-engine/src/capabilities/: mod.rs
crates/plugin-engine/src/capabilities/graphics/: ffi.rs  mod.rs
crates/plugin-engine/src/capabilities/net/socket/: tcp.rs
crates/plugin-engine/src/config/: mod.rs  section_option.rs  value.rs  value_type.rs
crates/plugin-engine/tests/: call_api.rs  fail_init.rs  hotswap.rs  hotswap_file_watcher_create.rs  hotswap_file_watcher_rename.rs  hotswap_load.rs  preload_plugins.rs  reload.rs  restart_plugin.rs
crates/plugin-engine/tests/common/: mod.rs
crates/plugin-engine/tests/context/: call_api.rs  empty.rs  mod.rs  tests_api.rs
crates/plugin-engine/tests/packed/: plugin_0.1.fsp
crates/plugin-engine/tests/plugin/src/: api.rs  lib.rs
crates/plugin-engine/tests/plugins/call_api_plugin/: Cargo.toml  manifest.toml
crates/plugin-engine/tests/plugins/fail_init_plugin/: Cargo.toml
crates/plugin-engine/tests/tests_plugins/call_api_plugin/src/: api.rs  lib.rs
crates/plugin-engine/tests/tests_plugins/empty_plugin/: Cargo.toml  manifest.toml
crates/plugin-engine/tests/tests_plugins/empty_plugin/src/: lib.rs
crates/plugin-engine/tests/tests_plugins/fail_init_plugin/: manifest.toml
crates/plugin-engine/tests/tests_plugins/fail_init_plugin/src/: lib.rs
crates/plugin-engine/tests/tests_plugins/plugin/: Cargo.toml  manifest.toml
crates/plugin-engine/tests/wit/: api.wit
crates/prototype/: Cargo.toml
crates/prototype/src/: main.rs
crates/prototype/src/capabilities/: mod.rs
crates/prototype/src/capabilities/general/: log.rs
crates/prototype/src/capabilities/graphics/: ffi.rs  mod.rs
crates/prototype/src/capabilities/net/: http.rs
crates/prototype/src/capabilities/net/socket/: tcp.rs  udp.rs
crates/prototype/src/compositor/: mod.rs  renderer.rs  state.rs  window.rs
crates/prototype/src/compositor/grabs/: move_grab.rs
crates/prototype/src/loader/: mod.rs  state.rs
crates/prototype/src/module/: context.rs  engine.rs  ffi.rs  loader.rs  logging.rs  manifest.rs  stdlib.rs
crates/prototype/src/module/config/: mod.rs  section.rs  section_option.rs
crates/wl_client/: Cargo.toml
crates/wl_client/src/: lib.rs
crates/wl_client/src/window/: mod.rs  pool.rs  transform.rs
examples/c_module/src/: module.c  module.wasm  my-core.wasm  plugin.c  plugin.h  shortcuts.h  test.sh
examples/c_module_example/: build.sh
examples/rust/: Cargo.toml  build.sh  manifest.toml
examples/rust/src/: fusion.rs  lib.rs
examples/rust/wit-fusion/: general.wit
examples/window_manager/: Cargo.toml  manifest.toml
examples/window_manager/src/: fusion.rs  lib.rs
include/fusion/: audio.h  import.h  ui.h
include/fusion/net/: socket_tcp.h  socket_udp.h
include/fusion/ui/: types.h
include/fusion/window/: window.h
specs/compositor/: general.wit  window.wit
(+73 files in other folders)
