[workspace]
resolver = "3"
members = [
    "crates/compositor",
    "crates/ctl",
    "crates/wl_client",
    "crates/graphics",
    "crates/graphics-derive",
    "crates/graphics-widgets",
    "crates/module-engine",
]

[workspace.dependencies]
### General
thiserror = "2.0.18"

module-engine = { path = "crates/module-engine" }

### Other
wasmtime = { version = "40.0.3", features = ["async"] }
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
zip = "7.2.0"
notify = "8.2.0"
tokio = { version = "1.49.0", features = ["full", "macros"] }
dirs = "6.0.0"
log = "0.4.29"
env_logger = "0.11.8"
chrono = { version = "0.4.43", features = ["serde"] }
bitflags = "2.10.0"
tree-sitter = "0.26.3"
regex = "1.12.2"
bytemuck = { version = "1.24.0", features = ["derive"] }
clap = { version = "4.5.55", features = ["derive"] }

#Https
http = "1.4.0"
hyper = { version = "1.8.1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.19", features = [
    "client-legacy",
    "client",
    "http1",
    "http2",
    "tokio",
] }
hyper-rustls = { version = "0.27.7", features = [
    "http1",
    "http2",
    "webpki-roots",
] }
http-body-util = "0.1.3"
bytes = "1.11.0"

### Wayland

# General
wgpu = "28.0.0"

# Server
smithay = "0.7.0"
wayland-server = "0.31.11"
winit = "0.30.12"
calloop = { version = "0.14.3", features = ["executor"] }

# Client
graphics = { path = "crates/graphics" }
graphics-derive = { path = "crates/graphics-derive" }
graphics-widgets = { path = "crates/graphics-widgets" }

wl_client = { path = "crates/wl_client" }
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.12"
wayland-protocols = { version = "0.32.10", features = ["wayland-server"] }
wayland-backend = { version = "0.3.12", features = ["client_system", "rwh_06"] }
wayland-scanner = "0.31.8"
memmap2 = "0.9.9"
tempfile = "3.24.0"
rayon = "1.11.0"
glam = { version = "0.31.0", features = ["bytemuck"] }
fontdue = { version = "0.9.3", features = ["simd", "parallel"] }
enum_dispatch = "0.3.13"
guillotiere = "0.6.2"
pollster = "0.4.0"
derive_more = { version = "2.1.1", features = ["from"] }
rand = "0.9.2"
image = "0.25.9"
resvg = "0.46.0"

tracy-client = "0.18.4"

syn = "2.0.114"
quote = "1.0.44"
proc-macro2 = "1.0.106"

once_cell = "1.21.3"
slotmap = "1.1.1"
lasso = "0.7.3"
lazy_static = "1.5.0"
wit-bindgen = "0.51.0"
