[workspace]
resolver = "3"
members = [
    "crates/compositor",
    #"crates/ctl",
    "crates/wl_client",
    "crates/graphics",
    "crates/graphics-derive",
    "crates/graphics-widgets",
    "crates/plugin-engine",
    "crates/cargo-fusion",

    "examples/*",

    # Plugin engine tests
    "crates/plugin-engine/tests/plugins/*",
]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[workspace.dependencies]
### General
thiserror = "2.0.18"

plugin-engine = { path = "crates/plugin-engine" }

### Other
wasmtime = { version = "41.0.2", features = ["async"] }
wasmtime-wasi = { version = "41.0.2" }
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
zip = "7.2.0"
notify = "8.2.0"
tokio = { version = "1.49.0", features = ["full", "macros"] }
dirs = "6.0.0"
log = "0.4.29"
env_logger = "0.11.8"
chrono = { version = "0.4.43" }
bitflags = "2.10.0"
tree-sitter = "0.26.5"
regex = "1.12.3"
bytemuck = { version = "1.25.0", features = ["derive"] }
clap = { version = "4.5.57", features = ["derive"] }

#Https
http = "1.4.0"
hyper = { version = "1.8.1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = [
    "client-legacy",
    "client",
    "http1",
    "http2",
    "tokio",
] }
hyper-rustls = { version = "0.27.7", features = [
    "http1",
    "http2",
    "webpki-roots",
] }
http-body-util = "0.1.3"
bytes = "1.11.1"

### Wayland

# General
wgpu = "28.0.0"

# Server
smithay = "0.7.0"
wayland-server = "0.31.11"
winit = "0.30.12"
calloop = { version = "0.14.3", features = ["executor"] }

# Client
graphics = { path = "crates/graphics" }
graphics-derive = { path = "crates/graphics-derive" }
graphics-widgets = { path = "crates/graphics-widgets" }

wl_client = { path = "crates/wl_client" }
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.12"
wayland-protocols = { version = "0.32.10", features = ["wayland-server"] }
wayland-backend = { version = "0.3.12", features = ["client_system", "rwh_06"] }
wayland-scanner = "0.31.8"
memmap2 = "0.9.9"
tempfile = "3.24.0"
rayon = "1.11.0"
glam = { version = "0.31.0", features = ["bytemuck"] }
fontdue = { version = "0.9.3", features = ["simd", "parallel"] }
enum_dispatch = "0.3.13"
guillotiere = "0.6.2"
pollster = "0.4.0"
rand = "0.9.2"
image = "0.25.9"
resvg = "0.46.0"

tracy-client = "0.18.4"

syn = "2.0.114"
quote = "1.0.44"
proc-macro2 = "1.0.106"

once_cell = "1.21.3"
slotmap = "1.1.1"
lasso = "0.7.3"
lazy_static = "1.5.0"
wit-bindgen = "0.52.0"

### [UTILS]
derive_more = { version = "2.1.1", features = ["from", "display"] }

### [BUILD]
cc = "1.2.55"

### [DEBUG]
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

### [CARGO-FUSION]
anyhow = "1.0.100"
cargo_metadata = "0.23.1"
cargo-manifest = "0.20.0"
walkdir = "2.5.0"
