[package]
name = "module-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
graphics.workspace = true

wasmtime.workspace = true
wasmtime-wasi.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
notify.workspace = true
tokio.workspace = true
zip.workspace = true
http-body-util.workspace = true
log.workspace = true
dirs.workspace = true
bitflags.workspace = true
toml.workspace = true
tree-sitter.workspace = true
regex.workspace = true
slotmap.workspace = true
rkyv.workspace = true
