[package]
name = "plugin-engine"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
notify.workspace = true
zip.workspace = true
http-body-util.workspace = true
log.workspace = true
dirs.workspace = true
bitflags.workspace = true
toml.workspace = true
tree-sitter.workspace = true
regex.workspace = true
slotmap.workspace = true
derive_more.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
lazy_static.workspace = true
env_logger.workspace = true
