[package]
name = "prototype"
version = "0.1.0"
edition = "2024"
lints.workspace = true

[dependencies]
tracy-client.workspace = true
graphics.workspace = true
wasmtime.workspace = true
toml.workspace = true
thiserror.workspace = true
serde.workspace = true
zip.workspace = true
notify.workspace = true
tokio.workspace = true
dirs.workspace = true
log.workspace = true
env_logger.workspace = true
chrono.workspace = true
bincode.workspace = true
bitflags.workspace = true
tree-sitter.workspace = true
regex.workspace = true
bytemuck.workspace = true

#Http
http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyper-rustls.workspace = true
http-body-util.workspace = true
bytes.workspace = true

#Compositor
smithay.workspace = true
wayland-server.workspace = true
wgpu.workspace = true
winit.workspace = true
calloop.workspace = true

graphics-widgets.workspace = true

[build-dependencies]
cc = "1.2.51"
