[package]
name = "wl_client"
version = "0.1.0"
edition = "2024"

[dependencies]
smithay-client-toolkit.workspace = true
wayland-client.workspace = true
wayland-protocols.workspace = true
wayland-backend.workspace = true
memmap2.workspace = true
tempfile.workspace = true
rayon.workspace = true
glam.workspace = true
