[package]
name = "wl_client"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false


[dependencies]
smithay-client-toolkit.workspace = true
wayland-client.workspace = true
wayland-protocols.workspace = true
wayland-backend.workspace = true
memmap2.workspace = true
tempfile.workspace = true
rayon.workspace = true
glam.workspace = true
